--- a/Final Year Project Dissertation/methodology.tex
+++ b/Final Year Project Dissertation/methodology.tex
@@ -1,43 +1,43 @@
 \chapter{Methodology}
-As mentioned in the Introduction, i looked at my weekly life as inspiration in deciding what type of application i will be making for my final year project. I looked at my place of work in retail in which i have five years experience. I looked at the day to day operations of the shop to see could i find anything that would save time, money and address an existing issue. My idea of a Date Control System saves time for staff when looking for items on the shop floor, they could just look at this application that would be linked to the shops stock database to show when products are close, on or past their sell by date, giving staff members the edge in finding all they need, whereas if it's done manually in person a staff member may miss something, putting a customer at risk of buying an out of date product. This idea also saves the shop money as in the sense it gives staff members time to possibly take the product off the shelf and reduce it so the shop could make some money on the item instead of just wasting it or getting very little in credit from the supplier. This was a key part of my methodology.
+As mentioned in the Introduction, my weekly life was looked at as inspiration in deciding what type of application to make for the final year project. The day to day operations of the shop were looked upon to see could anything be done to save time, money and address an existing issue. The idea of a Date Control System saves time for staff when looking for items on the shop floor, they could just look at this application that would be linked to the shops stock database to show when products are close, on or past their sell by date, giving staff members the edge in finding all they need, whereas if it's done manually in person a staff member may miss something, putting a customer at risk of buying an out of date product. This idea also saves the shop money as in the sense it gives staff members time to possibly take the product off the shelf and reduce it so the shop could make some money on the item instead of just wasting it or getting very little in credit from the supplier. This was a key part of my Methodology.
 \newline
 
 \subsection{Software Development v/s Research Methodology}
-As i decided on pursuing a Stock Date Control application i wanted to research if there was anything of the sort existing in the world in shops or warehouses. This was crucial in my research as if there was such a thing i could maybe implement it in my own way or of that to suit the likes of CBE's systems. This would also impact the software development side of the project as i would see how if an existing application exists works and how it is used within the workplace. If it didn't exist i knew i could implement something here that would be able to tackle an existing issue globally in terms of food wastage and customer consumption of an out of date product which can prove to be a very dangerous scenario. Not every customer checks the date on food products, it is our job to do so as shop workers and i feel an application to make date checking more sufficient will help suppress this potential hazard.  
+As decided to pursue a Stock Date Control application, research was needed to see  if there was anything of the sort existing in the world in shops or warehouses. This was crucial as if there was such a thing I could maybe implement it in my own way or of that to suit the likes of CBE's systems. This would also impact the software development side of the project as I'd be able to see how if an existing application exists works and how it is used within the workplace. If it didn't exist this could implement something here that would be able to tackle an existing issue globally in terms of food wastage and customer consumption of an out of date product which can prove to be a very dangerous scenario. Not every customer checks the date on food products, it is our job to do so as shop workers and the overall feeling is that an application to make date checking more sufficient will help suppress this potential hazard.  
 \newline
 
-Before i started to develop the software for this project, i did extensive research in shop databases and looked at the aspects and gathered inspiration from the shop i work in and their database for stock control. This helped with the design and functionality of the application. If i were to offer this service to CBE for example i wanted to have it in a way that they could implement it into their systems for their customers easily. You will see in the technology review section some screenshots of CBE's system for the shop i work in. 
+Before the software development of this project began, extensive research was done in shop databases and looked at the aspects and gathered inspiration from the shop and their database for stock control. This helped with the design and functionality of the application. If an offer was made of this service to CBE for example it needed to be in a certain way that they could implement it into their systems for their customers easily. You will see in the technology review section some screenshots of CBE's system for the shop in which I work in. 
 \newline
 
-After the past experiences of using the Ionic Framework and Firebase Cloud Storage Database i felt that after research into other alternatives that this was the best option for me in terms of development and easy to access for the staff member. It is all about making the application easy to use for the shop staff and not make it over complicated. This was the major characteristic in terms of the software development. If it is too complicated to use the staff member will not use it and go back to the human instinct of using the human eye to identify close or past their sell by date products. For this i conducted a survey within the shop i work in among colleagues and superiors to get feedback of potentially having this sort of application within the shop to help with date checking. Feedback from those who will be using this application in real time will be the most relevant in terms of factors to consider when potentially implementing this idea. 
+After the past experiences of using the Ionic Framework and Firebase Cloud Storage Database the feeling was that after research into other alternatives that this was the best option for me in terms of development and easy to access for the staff member. It is all about making the application easy to use for the shop staff and not make it over complicated. This was the major characteristic in terms of the software development. If it is too complicated to use the staff member will not use it and go back to the human instinct of using the human eye to identify close or past their sell by date products. For this a survey was conducted within the shop I work in among colleagues and superiors to get feedback of potentially having this sort of application within the shop to help with date checking. Feedback from those who will be using this application in real time will be the most relevant in terms of factors to consider when potentially implementing this idea. 
 \newline
 
-Research before pursuing a project idea into an application is highly recommended as it gives you insights into peoples opinions, what is needed to make this application beneficial and of course the question of "is it solving a problem". I also needed to refresh myself in terms of Ionic Firebase to be able produce this problem solving application, learning new functional elements and design elements that will make the application easy to use and understand for the shop staff. This was a crucial factor in the software development of this project. Intense research was done on all parts before starting the software development.
+Research before pursuing a project idea into an application is highly recommended as it gives you insights into peoples opinions, what is needed to make this application beneficial and of course the question of "is it solving a problem". A refresher was needed in terms of Ionic Firebase to be able produce this problem solving application, learning new functional elements and design elements that will make the application easy to use and understand for the shop staff. This was a crucial factor in the software development of this project. Intense research was done on all parts before starting the software development.
 
 \subsection{Agile / Incremental and iterative approach to development}
-The approach taken to develop this application was based around second opinions from fellow students, my project supervisor and the members of staff i work with. I met with my project supervisor weekly in the first semester of final year to intensely discuss this idea of a Date Control system being implemented into supermarkets and beyond. \newline
+The approach taken to develop this application was based around second opinions from fellow students, project supervisor and the members of staff in the workplace. Meetings with the project supervisor took place weekly in the first semester of final year to intensely discuss this idea of a Date Control system being implemented into supermarkets and beyond. \newline
 
 The First Semester of final year was mainly used to conduct a broad plan of the project as a whole. Conducting short surveys within the workplace which you will see shown in the Technology Review section of this dissertation. 
 \newline
 
-Firstly i researched this particular type of application, was it done before ? does it exist currently within workplaces and company systems ? I researched the topic in which i was unable to find much in terms of s system where date control existed in a manner in which i can see be implemented with this application. This citation from Google Scholar \cite{nakano2006food} was a very interesting read on the matter however gave me no indication an application or method was in place to tackle this issue within retail. 
+Firstly research was done in this particular type of application, was it done before ? does it exist currently within workplaces and company systems ? I researched the topic in which I was unable to find much in terms of s system where date control existed in a manner in which can be implemented with this application. This citation from Google Scholar \cite{nakano2006food} was a very interesting read on the matter however gave me no indication an application or method was in place to tackle this issue within retail. 
 \newline
 
-Sketches which you will see in the System Design section of this dissertation where done for how i wanted the application to look like. I wanted this application to be easy to use and understand for the worker, not make it fancy and complicated. I knew when sketching that i had to implement some elements that may not be used by the shop such as user authentication and a product entry form which wouldn't be used by CBE as they already have the stock inventory's databases for shops which would automatically show the products upon delivery entry. I knew from the outset this would more or so be a prototype more than the real thing to present to companies such as CBE and shops such as the one i have worked in for five years. 
+Sketches which you will see in the System Design section of this dissertation where done for how i wanted the application to look like. This application needed to be easy to use and understand for the worker, not make it fancy and complicated. I knew when sketching that implementation of some elements that may not be used by the shop such as user authentication and a product entry form which wouldn't be used by CBE as they already have the stock inventory's databases for shops which would automatically show the products upon delivery entry. From the outset this would more or so be a prototype more than the real thing to present to companies such as CBE and shops such as the one I have worked in for five years. 
 \newline
 
-It was over the festive period of 2019 where i needed to make a decision on the software development process. I needed to choose what technologies to use such as a programming framework of language along with a cloud database such as Firebase or MongoDB to store the user/staff data such as email and password and product entry in a crud designed way.
+It was over the festive period of 2019 the decision process took place on the software development process. A choice was needed in terms of what technologies to use such as a programming framework of language along with a cloud database such as Firebase or MongoDB to store the user/staff data such as email and password and product entry in a crud designed way.
 \newline
 
-After extensive planning and numerous opinions and advice i was ready to start developing the software for this application in early February. This may be later than some, however i wanted assurances over a number of aspects before developing this project in which they were met along with objectives and goals to meet. With every meeting with my project supervisor i shared my goals for the following week at the end of every meeting which encouraged me to work on this project daily rather than leaving it and coming back to it. I can tell you from experience doing it in one big bang in software development is not the way. You will always miss something, even minor. That is why i would not start developing the software until i was happy with the plan and objectives and goals set out and were they attainable.
+After extensive planning and numerous opinions and advice software development was ready to begin. This was around early February. This may be later than some, however assurances were needed over a number of aspects before developing this project in which they were met along with objectives and goals to meet. With every meeting with the project supervisor my goals were shared for the following week at the end of every meeting which encouraged me to work on this project daily rather than leaving it and coming back to it. From experience doing it in one big bang in software development is not the way. You will always miss something, even minor. That is why the software development did not start until satisfaction with the plan, objectives and goals were set out and were they attainable.
 
 \subsection{Application Testing}
 
-With every application comes testing. In this case i set out a list of tests to carry out on the application to carry out once the application was operational.
+With every application comes testing. In this case I set out a list of tests to carry out on the application once the application was operational.
 The tests are as follows:
 \newline
 
-- Running The application: This is all or nothing. In this case i will be running an "ionic serve" to run the application before making it a firebase hosted website.
+- Running The application: This is all or nothing. In this case I ran an "ionic serve" to run the application before making it a Firebase hosted website.
 \newline
 
 - Log/Sign In to an existing account: To be able to access the main functionality and purpose of this application a user must be able to sign in. 
@@ -46,7 +46,7 @@ The tests are as follows:
 - Register a New User and email verification: A staff member should be able to register an account to be able operate the application as intended. An email must be verified to log in to an account. If not verified you cannot access the applications dashboard.
 \newline
 
-- Forgot Password or Password Reset: Another new feature i found. Much like verify email to be sent to a registered account a password reset email should be sent to a existing user upon request. 
+- Forgot Password or Password Reset: Here a new feature was found. Much like verify email to be sent to a registered account a password reset email should be sent to a existing user upon request. 
 \newline
 
 - Log/Sign Out of application: Should successfully log the user out and to make them enter details again if they wish to sign back in.
@@ -54,8 +54,8 @@ The tests are as follows:
 
 - The CRUD functionality: adding, updating/editing and deleting a product is the main functionality of the application. This must work to show what is its intended purpose. \newline
 
-The results from these tests can be found in the system evaluation section of this dissertation. Testing the application before release is almost mandatory as if there are any issues you can try mend them or highlight them in release notes if there is an issue that cannot be fixed in time that may only be minor. Please not this will be a prototype to demo to shops and companies linked to shop inventory control to show my idea in real time.
+The results from these tests can be found in the system evaluation section of this dissertation. Testing the application before release is almost mandatory as if there are any issues you can try mend them or highlight them in release notes if there is an issue that cannot be fixed in time that may only be minor. Please note that this will be a prototype to demonstrate to shops and companies linked to shop inventory control to show the idea in real time.
 
 
 \subsection{GitHub and Development Tools}
-To develop this project i created a repository on GitHub and cloned the repository to my computer desktop. I then opened the folder in the command prompt window and installed the relevant libraries, modules and add-ons for the ionic firebase application i planned to create. When the relevant npm installs for ionic were completed i then needed to open the IDE for the software development. After creating the ionic project i went into the project directory and opened the project in Visual Studio Code using the command 'code .'. I could of used a range of different IDEs to do my project but Visual Studio Code was my preference due to my experience using it during the 4 years of the course and because its my go to editor. Not to mention Firebase was my choice of database to store Authentication data and product data. I also used Overleaf to write this dissertation in LaTeX. In later development i needed to make this application a firebase website for easy access for the user. I had to initialise firebase and deploy my application for firebase to then host my application as a website instead of running ionic serve which may hinder the user if they were to clone the GitHub Repository and having to install all the necessary libraries for Ionic.
+To develop this project a GitHub Repository was this was cloned to my computer desktop. The folder was then opened in the command prompt window to install the relevant libraries, modules and add-ons for the Ionic Firebase application. When the relevant npm installs for Ionic were completed I then needed to open the IDE for the software development. After creating the Ionic project I went into the project directory and opened the project in Visual Studio Code using the command 'code .'. There are a range of different code editors to do this project but Visual Studio Code was the preferred choice due to the past experience using it during the 4 years of the course. Not to mention Firebase was the choice of database to store Authentication data and product data. Overleaf was also used to write this dissertation in LaTeX. In later development I needed to make this application a Firebase website for easy access for the user. Firebase initialization was needed to deploy the application for Firebase to then host the Ionic application as a website instead of running ionic serve which may hinder the user if they were to clone the GitHub Repository and having to install all the necessary libraries for Ionic.
